--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                         <span class="fi fi-gb"></span> EN
                     </div>
                     <ul class="options">
-                        <li data-lang="en"><span class="fi fi-gb"></span> EN</li>
-                        <li data-lang="fr"><span class="fi fi-fr"></span> FR</li>
-                        <li data-lang="it"><span class="fi fi-it"></span> IT</li>
+                        <li data-lang="en"><span class="fi fi-gb"></span> en</li>
+                        <li data-lang="fr"><span class="fi fi-fr"></span> fr</li>
+                        <li data-lang="it"><span class="fi fi-it"></span> it</li>
                     </ul>
                 </div>
             </div>
