--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="lang-switcher">
                 <div class="custom-select" id="language-select">
                     <div class="selected">
-                        <span class="fi fi-gb"></span> EN
+                        <span class="fi fi-gb"></span> en
                     </div>
                     <ul class="options">
                         <li data-lang="en"><span class="fi fi-gb"></span> en</li>
@@ -307,6 +307,18 @@
                     <video src="medias/videos/geographie.mp4" autoplay muted loop></video>
                 </div>
             </div>
+
+            <!-- Guitare -->
+            <div class="interest-card">
+                <div class="interest-front">
+                    <h3><i class="fas fa-guitar"></i> Guitar</h3>
+                    <p>Feel the rhythm and create melodies</p>
+                </div>
+                <div class="interest-back">
+                    <video src="medias/videos/guitare.mp4" autoplay muted loop></video>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
