--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <div class="interest-card">
                 <div class="interest-front">
                     <h3><i class="fas fa-guitar"></i> Guitar</h3>
-                    <p>Feel the rhythm and create melodies</p>
+                    <p>Feel the melody and improvise</p>
                 </div>
                 <div class="interest-back">
                     <video src="medias/videos/guitare.mp4" autoplay muted loop></video>
