--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <p>Feel the melody and improvise</p>
                 </div>
                 <div class="interest-back">
-                    <video src="medias/videos/guitare.mp4" autoplay muted loop></video>
+                    <img src="medias/images/guitars.png"></img>
                 </div>
             </div>
 
