--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <p>Feel the melody and improvise</p>
                 </div>
                 <div class="interest-back">
-                    <img src="medias/images/guitars.png"></img>
+                    <img src="medias/images/guitars.png" alt="Different types of guitars">
                 </div>
             </div>
 
